--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="slider">
             <div class="slider-wrapper">
                 <div class="slider-items">
-                    <img class ="slider-img" src="img/air.png" alt="air jordans">
+                    <img class ="slider-img" src="./img/air.png" alt="air jordans">
                     <div class="slider-circle"></div>
                     <h1 class="slider-title"> AIR FORCE <br />NEW <br />SEASON</h1>          
                     <h2 class="slider-price"> $119</h2>      
